apps/docmosis/aat/base/docmosis-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: docmosis-rstoapipathrewrite@kubernetescrd
  name: docmosis-ingress
  namespace: docmosis
spec:
  rules:
    - host: docmosis.aat.platform.hmcts.net
      http:
        paths:
          - backend:
              service:
                name: docmosis-base
                port:
                  number: 80
            path: /rs
            pathType: Prefix
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rstoapipathrewrite
  namespace: docmosis
spec:
  replacePathRegex:
    regex: '^/rs/(.*)'
    replacement: '/api/$1'
